# compile_command_from_keil

./: .gitignore  .gitmodules  CMakeLists.txt  SLS.uvprojx  SLS_Application.uvprojx  main  main.cpp
src/: CMakeLists.txt  cmd_line.cpp  cmd_line.h  compile_db.h  main.cpp  static_map.h  xml_analysis.cpp  xml_analysis.h
